--- a/net/grpc/gateway/examples/dynamo/commonjs-example/echotest.html
+++ b/net/grpc/gateway/examples/dynamo/commonjs-example/echotest.html
@@ -31,7 +31,8 @@
     <div class="row" id="first">
       <div class="form-group">
         <div class="input-group">
-          <input type="text" class="form-control" id="put-msg">
+          <div id="key"></div>
+          <div id="value"></div>
           <span class="input-group-btn">
             <button class="btn btn-primary" type="button" id="put">put
             </button>
